[gd_scene load_steps=28 format=3 uid="uid://dexj8pl1i4ad"]

[ext_resource type="Script" path="res://Scripts/Characters/Villains/BrainMole.gd" id="1_iqdgp"]
[ext_resource type="Texture2D" uid="uid://tbyqi8sm0mlt" path="res://Assets/Characters/Villains/BrainMoleMonarch.png" id="2_u2qup"]
[ext_resource type="Texture2D" uid="uid://ckd1mtuus8hmb" path="res://Assets/Items/Props/healthbarProgress.png" id="3_8ktx3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5dwgj"]
radius = 12.5
height = 26.0

[sub_resource type="Animation" id="Animation_6g1bw"]
resource_name = "Attack"
length = 0.53
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_kg34n"]
resource_name = "Die"
length = 0.53
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 27]
}

[sub_resource type="Animation" id="Animation_megcn"]
resource_name = "Idle"
length = 0.32
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_3j6u3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_a02sg"]
resource_name = "Walk"
length = 0.73
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ibi1"]
_data = {
"Attack": SubResource("Animation_6g1bw"),
"Die": SubResource("Animation_kg34n"),
"Idle": SubResource("Animation_megcn"),
"RESET": SubResource("Animation_3j6u3"),
"Walk": SubResource("Animation_a02sg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kmyji"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vofhl"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kopfp"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nbgvb"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_smt3e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f7lvv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hnfia"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pkvjw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rif52"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n6r0e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rhws8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8m6t8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3gpl1"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jqmn6"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wute7"]
states/Attack/node = SubResource("AnimationNodeAnimation_kmyji")
states/Attack/position = Vector2(514, 34)
states/Die/node = SubResource("AnimationNodeAnimation_vofhl")
states/Die/position = Vector2(514, 155)
states/Idle/node = SubResource("AnimationNodeAnimation_kopfp")
states/Idle/position = Vector2(762, 100)
states/Walk/node = SubResource("AnimationNodeAnimation_nbgvb")
states/Walk/position = Vector2(384, 100)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_smt3e"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_f7lvv"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_hnfia"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_pkvjw"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_rif52"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_n6r0e"), "Attack", "Die", SubResource("AnimationNodeStateMachineTransition_rhws8"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_8m6t8"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_3gpl1"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_jqmn6")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnit5"]
radius = 63.0
height = 143.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l04h6"]
radius = 12.0
height = 29.0

[node name="BrainMoleMonarch" type="CharacterBody2D"]
position = Vector2(1, -38)
scale = Vector2(2, 2)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_iqdgp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_u2qup")
hframes = 7
vframes = 4
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("CapsuleShape2D_5dwgj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ibi1")
}
autoplay = "Walk"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wute7")
anim_player = NodePath("../AnimationPlayer")

[node name="BrainMoleLife" type="TextureProgressBar" parent="."]
offset_left = -19.0
offset_top = -16.0
offset_right = 45.0
offset_bottom = -6.0
scale = Vector2(0.6, 0.6)
value = 100.0
texture_progress = ExtResource("3_8ktx3")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1.5, 21.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vnit5")

[node name="Movimento" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l04h6")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Movimento" to="." method="_on_movimento_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
